# intelligent-robotics-patrol-robot

./: .gitignore  README.md
src/01_basics/: setup.py
src/01_basics/basics/: publisher.py  subscriber.py
src/01_basics/launch/: pub_sub.launch.py
src/02_robot_description/: setup.py
src/02_robot_description/robot_description/: fk_node.py
src/attendance_msgs/: CMakeLists.txt  package.xml
src/attendance_msgs/msg/: AttendanceMsg.msg  DetectionResult.msg  PatrolReport.msg  SeatTarget.msg
src/attendance_robot/: package.xml  setup.cfg  setup.py
src/attendance_robot/attendance_robot/: attendance_node.py
src/gazebo_simulation/: package.xml  setup.py
src/gazebo_simulation/launch/: classroom.launch.py  start_two_r_robot.launch.py
src/gazebo_simulation/maps/: classroom.pgm  classroom.yaml
src/gazebo_simulation/worlds/: classroom.world
src/patrol_robot/: package.xml  setup.cfg  setup.py
src/patrol_robot/config/: seat_positions.yaml
src/patrol_robot/launch/: patrol_system.launch.py
src/patrol_robot/patrol_robot/: checker_node.py  initial_pose_node.py  patrol_node.py  visualizer_node.py
src/patrol_robot/rviz/: patrol_system.rviz
