<?xml version="1.0"?>
<package format="3">
  <name>attendance_robot</name>
  <version>0.0.0</version>
  <description>Attendance robot package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>attendance_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>